ejad va edit course ha ba fasl bandi dorost shod
